--- a/doc/src/users-guide/ch-transport.tex
+++ b/doc/src/users-guide/ch-transport.tex
@@ -2,6 +2,7 @@
 \label{cha:transport-protocols}
 
 \section{Overview}
+\label{sec:transport:overview}
 
 INET contains support for the following transport layer protocols: TCP, UDP,
 SCTP, RTP.
@@ -16,10 +17,10 @@ sctp: <sctpType> like ISctp if hasSctp;
 \end{ned}
 
 \section{TCP}
-\label{sec:tcp}
+\label{sec:transport:tcp}
 
 \subsection{Overview}
-\label{sec:tcp_prot}
+\label{sec:transport:tcp-overview}
 
 TCP protocol is the most widely used protocol of the Internet. It provides
 reliable, ordered delivery of stream of bytes from one application on one
@@ -31,12 +32,12 @@ is hard to see how the different requirements interact with each other.
 INET contains three implementations of the TCP protocol:
 
 \begin{itemize}
-  \item \nedtype{Tcp} is the primary implementation, designed for readability, 
+  \item \nedtype{Tcp} is the primary implementation, designed for readability,
     extensibility, and experimentation.
-  \item \nedtype{TcpLwip} is a wrapper around the lwIP (Lightweight IP) library, 
+  \item \nedtype{TcpLwip} is a wrapper around the lwIP (Lightweight IP) library,
     a widely used open source TCP/IP stack designed for embedded systems.
-  \item \nedtype{TcpNsc} wraps Network Simulation Cradle (NSC), a library 
-    that allows real world TCP/IP network stacks to be used inside a 
+  \item \nedtype{TcpNsc} wraps Network Simulation Cradle (NSC), a library
+    that allows real world TCP/IP network stacks to be used inside a
     network simulator.
 \end{itemize}
 
@@ -46,7 +47,7 @@ also mixed in the same network.
 
 
 \subsection{Tcp}
-\label{sec:tcp_module}
+\label{sec:transport:tcp}
 
 The \nedtype{Tcp} simple module is the main implementation of the TCP protocol
 in the INET framework.
@@ -93,7 +94,7 @@ them in C++.
 
 
 \subsection{TcpLwip}
-\label{sec:tcp_lwip}
+\label{sec:transport:tcplwip}
 
 \textit{lwIP} is a light-weight implementation of the TCP/IP protocol suite
 that was originally written by Adam Dunkels of the Swedish Institute of
@@ -135,7 +136,7 @@ Features:
 \end{itemize}
 
 \subsection{TcpNsc}
-\label{sec:tcp_nsc}
+\label{sec:transport:tcpnsc}
 
 Network Simulation Cradle (NSC) is a tool that allow real-world TCP/IP network stacks
 to be used in simulated networks. The NSC project is created by Sam Jansen
@@ -193,7 +194,7 @@ data transfer mode.
 \end{itemize}
 
 \section{UDP}
-\label{sec:udp}
+\label{sec:transport:udp}
 
 The UDP protocol is a very simple datagram transport protocol, which
 basically makes the services of the network layer available to the applications.
@@ -207,7 +208,7 @@ can be any module implementing that interface.
 
 
 \section{SCTP}
-\label{sec:sctp}
+\label{sec:transport:sctp}
 
 The \nedtype{Sctp} module implements the Stream Control Transmission Protocol
 (SCTP). Like TCP, SCTP provides reliable ordered data delivery over an ureliable
@@ -216,7 +217,7 @@ multiple streams of data at the same time between two end points that have
 established a connection.
 
 \section{RTP}
-\label{sec:rtp}
+\label{sec:transport:rtp}
 
 The Real-time Transport Protocol (RTP) is a transport layer protocol for
 delivering audio and video over IP networks. RTP is used extensively in
