--- a/doc/src/users-guide/ch-diffserv.tex
+++ b/doc/src/users-guide/ch-diffserv.tex
@@ -245,6 +245,7 @@ maximum threshold, it will be dropped by a given probability.
 This probability determined by a linear function which is
 0 at the minth and maxp at maxth.
 
+\begin{pdfonly}
 \begin{center}
 \setlength{\unitlength}{1cm}
 \begin{picture}(7,4)(-1,-1)
@@ -266,6 +267,11 @@ This probability determined by a linear function which is
 \put(3.9,-0.3){$th_{max}$}
 \end{picture}
 \end{center}
+\end{pdfonly}
+
+\begin{htmlonly}
+[TODO reproduce image in HTML as well]
+\end{htmlonly}
 
 The queue length can be smoothed by specifying the \fpar{wq}
 parameter. The average queue length used in the tests
@@ -551,9 +557,13 @@ The \nedtype{DiffservQueue} is an example queue, that can be used in
 interfaces of DS core and edge nodes to support
 the AFxy (RFC 2597) and EF (RFC 3246) PHBs.
 
-\begin{center}
-\includegraphics[scale=0.7]{figures/DiffservQueue.png}
-\end{center}
+\begin{figure}[htbp]
+  \begin{center}
+    \includepng[scale=0.7]{figures/DiffservQueue}
+    \caption{DiffservQueue}
+    \label{fig:DiffservQueue}
+  \end{center}
+\end{figure}
 
 The incoming packets are first classified according to
 their DSCP field. DSCPs other than AFxy and EF are handled
