doc/ug: added missing images to HTML version

--- a/doc/src/users-guide/ch-diffserv.tex
+++ b/doc/src/users-guide/ch-diffserv.tex
@@ -270,7 +270,7 @@ This probability determined by a linear function which is
 \end{pdfonly}
 
 \begin{htmlonly}
-[TODO reproduce image in HTML as well]
+<center><img src="red-dropper.png" border="0" width="340"></center> <!-- screenshot from the PDF version -->
 \end{htmlonly}
 
 The queue length can be smoothed by specifying the \fpar{wq}
