--- a/doc/src/users-guide/ch-mobility.tex
+++ b/doc/src/users-guide/ch-mobility.tex
@@ -163,7 +163,7 @@ by the \fpar{x1}, \fpar{y1}, \fpar{x2}, \fpar{y2} parameters.
 \end{pdfonly}
 
 \begin{htmlonly}
-[TODO reproduce drawing in SVG]
+<center><img src="tractormobility.png" border="0" width="240"></center> <!-- screenshot from the PDF version -->
 \end{htmlonly}
 
 \subsubsection*{RandomWaypointMobility}
