doc/ug: ch-transport refined; fix typo

--- a/doc/src/users-guide/ch-diffserv.tex
+++ b/doc/src/users-guide/ch-diffserv.tex
@@ -44,7 +44,7 @@ first.
 In the Differentiated Service architecture, the network is partitioned into
 DiffServ domains. Within each domain the resources of the domain are allocated
 to forwarding classes, taking into account the available resources and the
-traffic flows. There are \emph{service level agggreements} (SLA) between the users
+traffic flows. There are \emph{service level agreements} (SLA) between the users
 and service providers, and between the domains that describe the mapping of
 packets to forwarding classes and the allowed traffic profile for each class.
 The routers at the edge of the network are responsible for marking the packets
