doc: fixed users guide and developers guide for the web.

--- a/doc/src/developers-guide/ch-usage.tex
+++ b/doc/src/developers-guide/ch-usage.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{Getting Started}
 \label{cha:gettingstarted}
 
@@ -36,5 +38,5 @@ Set up version control (git, GitHub).
 Develop.
 
 
-
+\fi
 
