All: Updated ChangeLog files for changes in INET 4.x integration branch from 2017-06-05 to 2018-06-13.

--- a/src/inet/common/ChangeLog
+++ b/src/inet/common/ChangeLog
@@ -1,5 +1,17 @@
 ====== inet-4.x ======
 
+2018-06-11  Zoltan Bojthe
+
+	Replaced protocol name and descriptiveName fields with std::string.
+
+2018-06-08  Zoltan Bojthe
+
+	Remove obsolete omnetpp version related code from NedFunctions: #if OMNETPP_VERSION < 0x504
+
+2018-06-06  Zoltan Bojthe
+
+	Updated the required omnetpp version to 5.4
+
 2018-05-29  Levente Mészáros
 
 	Added makePathForFile call before opening any output file to make sure the directory exists.
