--- a/src/inet/applications/generic/ChangeLog
+++ b/src/inet/applications/generic/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2018-06-11  Zoltan Bojthe
+
+	Fixed memory leak.
+
 2018-04-13  ------ inet-3.99.3 released ------
 
 2018-02-23  Zoltan Bojthe
