--- a/src/inet/applications/tcpapp/ChangeLog
+++ b/src/inet/applications/tcpapp/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2018-06-01  Zoltan Bojthe
+
+	Added B/b units to length constants and length fields of chunks.
+
 2018-05-11  Levente Mészáros
 
 	Refactored TcpServerHostApp to properly use TcpSocket when accepting connections.
