--- a/src/inet/common/packet/ChangeLog
+++ b/src/inet/common/packet/ChangeLog
@@ -1,5 +1,14 @@
 ====== inet-4.x ======
 
+2018-06-11  Zoltan Bojthe
+
+	Fixed memory leak in assignment and move operators of RegionTag.
+	Enhanced operator= in RegionTagSet, RegionTag for checking foo1 = foo1.
+
+2018-06-01  Zoltan Bojthe
+
+	Added B/b units to length constants and length fields of chunks.
+
 2018-05-04  Levente Mészáros
 
 	Removed implicit peek till end behavior from peekAt and peekDataAt.
