--- a/src/inet/common/packet/recorder/ChangeLog
+++ b/src/inet/common/packet/recorder/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2018-06-01  Zoltan Bojthe
+
+	Added B/b units to length constants and length fields of chunks.
+
 2018-05-29  Levente Mészáros
 
 	Added makePathForFile call before opening any output file to make sure the directory exists.
