--- a/src/inet/linklayer/ieee80211/mac/ChangeLog
+++ b/src/inet/linklayer/ieee80211/mac/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2018-06-08  Mani Amoozadeh
+
+	Added initialRadioMode parameter.
+
 2018-06-05  Levente Mészáros
 
 	Replaced fooType NED parameters with foo.typename parameters.
