--- a/src/inet/linklayer/ieee80211/mac/contract/ChangeLog
+++ b/src/inet/linklayer/ieee80211/mac/contract/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2018-06-01  Mani Amoozadeh
+
+	Added interfaces for Dcf, Hcf and Ds mac submodules.
+
 2018-04-13  ------ inet-3.99.3 released ------
 
 2017-12-22  ------ inet-3.99.2 released ------
