--- a/src/inet/mobility/base/ChangeLog
+++ b/src/inet/mobility/base/ChangeLog
@@ -1,5 +1,11 @@
 ====== inet-4.x ======
 
+2018-06-11  Levente Mészáros
+
+	Added usage of canvas projection when initializing from display string.
+	Added updateDisplayString parameter which allows disabling position updates.
+	Dropped obsolete visualizeMobility, renamed visualRepresentation parameter to subjectModule.
+
 2018-06-04  Levente Mészáros
 
 	Replaced +-1/0 NED parameter value with +-inf.
