--- a/src/inet/networklayer/ipv4/ChangeLog
+++ b/src/inet/networklayer/ipv4/ChangeLog
@@ -1,8 +1,16 @@
 ====== inet-4.x ======
 
+2018-06-08  Levente Mészáros
+
+	Fixed Ipv4RoutingTable cache invalidation.
+
 2018-06-05  Levente Mészáros
 
 	Replaced fooType NED parameters with foo.typename parameters.
+
+2018-06-01  Zoltan Bojthe
+
+	Added B/b units to length constants and length fields of chunks.
 
 2018-05-22  Levente Mészáros
 
