--- a/src/inet/networklayer/ipv6/ChangeLog
+++ b/src/inet/networklayer/ipv6/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2018-06-01  Zoltan Bojthe
+
+	Added B/b units to length constants and length fields of chunks.
+
 2018-05-25  Zoltan Bojthe
 
 	Removed @clone(->dup()) KLUDGEs from MSG files for owned pointers.
