--- a/src/inet/routing/gpsr/ChangeLog
+++ b/src/inet/routing/gpsr/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2018-06-01  Zoltan Bojthe
+
+	Added B/b units to length constants and length fields of chunks.
+
 2018-04-25  Gyorgy Szaszko
 
 	Added boolean parameter for displaying packet routing state changes with bubbles.
