--- a/src/inet/routing/ospfv2/ChangeLog
+++ b/src/inet/routing/ospfv2/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2018-06-01  Zoltan Bojthe
+
+	Added B/b units to length constants and length fields of chunks.
+
 2018-05-04  Rudolf Hornig
 
 	Changed an integer parameter unit to second.
