--- a/src/inet/transportlayer/tcp_lwip/ChangeLog
+++ b/src/inet/transportlayer/tcp_lwip/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2018-06-01  Zoltan Bojthe
+
+	Added B/b units to length constants and length fields of chunks.
+
 2018-05-10  Zoltan Bojthe
 
 	Moved header serializers to the corresponding protocol folders.
