--- a/src/inet/transportlayer/udp/ChangeLog
+++ b/src/inet/transportlayer/udp/ChangeLog
@@ -1,5 +1,13 @@
 ====== inet-4.x ======
 
+2018-06-06  Zoltan Bojthe
+
+	Fixed checks for too short totalLength, truncate padding (out of totalLength).
+
+2018-06-01  Zoltan Bojthe
+
+	Added B/b units to length constants and length fields of chunks.
+
 2018-05-10  Zoltan Bojthe
 
 	Moved header serializers to the corresponding protocol folders.
