--- a/src/inet/visualizer/base/ChangeLog
+++ b/src/inet/visualizer/base/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2018-06-08  Gyorgy Szaszko
+
+	Added metric to RoutingTableVisualizerBase labelFormat directives.
+
 2018-06-04  Levente Mészáros
 
 	Replaced 0/0 NED parameter values with nan.
